register and login api

--- a/config/env/config.development.json
+++ b/config/env/config.development.json
@@ -10,9 +10,7 @@
         "database": {
             "host": "localhost",
             "port": 27017,
-            "name": "todo-app",
-            "username": "admin",
-            "password": "admin"
+            "name": "todoapp"
         }
     }
 }
