--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ng serve"
   },
   "repository": {
     "type": "git",
