--- a/config/env/config.production.json
+++ b/config/env/config.production.json
@@ -10,9 +10,9 @@
         "database": {
             "host": "localhost",
             "port": 27017,
-            "name": "todo-app",
-            "username": "admin",
-            "password": "admin"
+            "name": "todoapp",
+            "username": "saadahmed",
+            "password": "saad@123"
         }
     }
 }
